[gd_scene load_steps=2 format=3 uid="uid://cngwresdnf7yd"]

[ext_resource type="Script" path="res://ui/options_menu/options_menu.gd" id="1_uf7qo"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uf7qo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.882353)

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Options/HBoxContainer"]
custom_minimum_size = Vector2(300, 125)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Volumen general"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainVolumeSlider" type="HSlider" parent="Options/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 125)
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="HBoxContainer2" type="HBoxContainer" parent="Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Options/HBoxContainer2"]
custom_minimum_size = Vector2(300, 125)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Volumen de la m√∫sica"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="Options/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 125)
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="HBoxContainer3" type="HBoxContainer" parent="Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Options/HBoxContainer3"]
custom_minimum_size = Vector2(300, 125)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Volumen de SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="Options/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 125)
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="HBoxContainer4" type="HBoxContainer" parent="Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CheckBox" type="CheckBox" parent="Options/HBoxContainer4"]
custom_minimum_size = Vector2(300, 125)
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_font_sizes/font_size = 35
text = "Pantalla completa"

[node name="CloseButton" type="Button" parent="Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Cerrar"

[connection signal="value_changed" from="Options/HBoxContainer/MainVolumeSlider" to="." method="_on_main_volume_slider_value_changed"]
[connection signal="value_changed" from="Options/HBoxContainer2/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="Options/HBoxContainer3/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="toggled" from="Options/HBoxContainer4/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="button_up" from="Options/CloseButton" to="." method="_on_close_button_button_up"]
